added logic of game complete and timer

--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
+    <div class="header">
+        <div class="restart restart-icon">
+            <i class="uil uil-redo"></i>
+           </div>
+           <div class="timer">
+               0
+           </div>
+        <div id="score">0</div>
+    </div>
     <div class="container">
         <h1 class="head">FLIP OVER
-
-            <div class="counter btn"></div>
         </h1>
+        <h3 class="counter"></h3>
         <div class="board">
         </div>
         <div class="init-btn btn">Start</div>
-        <div id="score">0</div>
         <div id='gameover'>
-            <h1 class="endline">Very well played you have cleared the game </h1>
+            <h1 class="endline"></h1>
             <div class="restart">
                 Restart <i class="uil uil-redo"></i>
             </div>
-        </div>
-        <div class="restart fixed">
-         <i class="uil uil-redo"></i>
         </div>
     </div>
 </body>
